--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ jobs:
     - name: Build app
       run: "echo 'noop - build not needed for this project'"
     - name: Publish app
-      uses: signalnerve/wrangler-action@0.0.17
-      env:
+      uses: signalnerve/wrangler-action@0.0.18
+      with:
         CLOUDFLARE_API_KEY: ${{ secrets.CLOUDFLARE_API_KEY }}
         CLOUDFLARE_EMAIL: ${{ secrets.CLOUDFLARE_EMAIL }}
