Test envs, update input names

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,8 @@ jobs:
     - name: Build app
       run: "echo 'noop - build not needed for this project'"
     - name: Publish app
-      uses: signalnerve/wrangler-action@0.0.19
+      uses: signalnerve/wrangler-action@0.0.20
       with:
-        CLOUDFLARE_API_KEY: ${{ secrets.CLOUDFLARE_API_KEY }}
-        CLOUDFLARE_EMAIL: ${{ secrets.CLOUDFLARE_EMAIL }}
+        apiKey: ${{ secrets.CLOUDFLARE_API_KEY }}
+        email: ${{ secrets.CLOUDFLARE_EMAIL }}
+        environment: "production"
