--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
       - master
   repository_dispatch:
   schedule:
-    - cron: "39 * * * *"
+    - cron: "0 * * * *"
 
 jobs:
   deploy:
@@ -20,3 +20,8 @@ jobs:
         apiKey: ${{ secrets.CLOUDFLARE_API_KEY }}
         email: ${{ secrets.CLOUDFLARE_EMAIL }}
         environment: "production"
+    - name: Validate with scraper
+      uses: signalnerve/scraper-action@master
+      with:
+        url: "https://static-test.signalnerve.workers.dev/"
+        selector: "h1"
