--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
         email: ${{ secrets.CLOUDFLARE_EMAIL }}
         environment: "production"
     - name: Validate with scraper
-      uses: signalnerve/scraper-action@master
+      uses: signalnerve/scraper-action@0.0.1
       with:
         url: "https://static-test-prod.signalnerve.workers.dev/"
         selector: "h1"
